--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
